Adds GitHub Sponsorship [skip ci]

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,6 @@
 # Help me support this package
 
+github: DarkGhostHunter
 patreon: PackagesForLaravel
 ko_fi: DarkGhostHunter
 custom: ['https://www.buymeacoffee.com/darkghosthunter', 'https://paypal.me/darkghosthunter']
