--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,3 @@
-# Help me support this package
-
-patreon: PackagesForLaravel
-ko_fi: DarkGhostHunter
-custom: ['https://www.buymeacoffee.com/darkghosthunter', 'https://paypal.me/darkghosthunter']
+# Let's keep it free and up to date
+github: DarkGhostHunter
+custom: "https://paypal.me/darkghosthunter"
