--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -91,6 +91,7 @@ jobs:
       - name: "Set up PHP"
         uses: "shivammathur/setup-php@v2"
         with:
+          tools: "phpstan"
           php-version: "latest"
 
       - name: "Checkout code"
