--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
     "require": {
         "php": ">=8.0",
         "laragear/compare": "1.*",
-        "illuminate/support": "9.*",
-        "illuminate/http": "9.*"
+        "illuminate/support": "^9.0|^10.0",
+        "illuminate/http": "^9.0|^10.0",
     },
     "require-dev": {
         "mockery/mockery": "^1.5",
