--- a/.gitattributes
+++ b/.gitattributes
@@ -2,11 +2,12 @@
 # https://www.kernel.org/pub/software/scm/git/docs/gitattributes.html
 
 # Ignore all test and documentation with "export-ignore".
-/.github            export-ignore
 /.gitattributes     export-ignore
 /.gitignore         export-ignore
-/.styleci.yml       export-ignore
-/phpunit.xml.dist   export-ignore
+/.travis.yml        export-ignore
 /phpunit.xml        export-ignore
+/phpunit.xml.dist   export-ignore
+/.styleci.yml       export-ignore
 /tests              export-ignore
 /.editorconfig      export-ignore
+/.github            export-ignore
